// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Elysium Theme pageTokens should match the established baseline 1`] = `
{
  "page": {
    "backdrop": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "rgba(49.00000087916851, 45.00000111758709, 46.000001057982445, 0.800000011920929)",
          "_lightMode": "rgba(236.00000113248825, 235.0000011920929, 235.0000011920929, 0.6000000238418579)",
          "base": "rgba(49.00000087916851, 45.00000111758709, 46.000001057982445, 0.800000011920929)",
        },
      },
    },
    "bg": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.80}",
          "_lightMode": "{colors.elysium.neutral.5}",
          "base": "{colors.elysium.neutral.80}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.70}",
          "_lightMode": "{colors.elysium.neutral.20}",
          "base": "{colors.elysium.neutral.70}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.60}",
          "_lightMode": "{colors.elysium.neutral.30}",
          "base": "{colors.elysium.neutral.60}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.90}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.90}",
        },
      },
    },
    "border": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.70}",
          "_lightMode": "{colors.elysium.neutral.20}",
          "base": "{colors.elysium.neutral.70}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.30}",
          "_lightMode": "{colors.elysium.neutral.40}",
          "base": "{colors.elysium.neutral.30}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.50}",
          "_lightMode": "{colors.elysium.neutral.30}",
          "base": "{colors.elysium.neutral.50}",
        },
      },
    },
    "surface": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.90}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.90}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.70}",
          "_lightMode": "{colors.elysium.neutral.10}",
          "base": "{colors.elysium.neutral.70}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.60}",
          "_lightMode": "{colors.elysium.neutral.20}",
          "base": "{colors.elysium.neutral.60}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.50}",
          "_lightMode": "{colors.elysium.neutral.30}",
          "base": "{colors.elysium.neutral.50}",
        },
      },
      "initial": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.5}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
      "inverse": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.5}",
          "_lightMode": "{colors.elysium.neutral.90}",
          "base": "{colors.elysium.neutral.5}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Static text with the least amount of emphasis, like disabled text elements or captions. ",
        "value": {
          "_darkMode": "{colors.elysium.neutral.30}",
          "_lightMode": "{colors.elysium.neutral.50}",
          "base": "{colors.elysium.neutral.30}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.10}",
          "_lightMode": "{colors.elysium.neutral.70}",
          "base": "{colors.elysium.neutral.10}",
        },
      },
      "300": {
        "description": "High emphasis static text on page, like page headers or section titles. ",
        "value": {
          "_darkMode": "{colors.elysium.neutral.white}",
          "_lightMode": "{colors.elysium.neutral.100}",
          "base": "{colors.elysium.neutral.white}",
        },
      },
      "initial": {
        "description": "The default styling for static text and icons on a page.",
        "value": {
          "_darkMode": "{colors.elysium.neutral.5}",
          "_lightMode": "{colors.elysium.neutral.90}",
          "base": "{colors.elysium.neutral.5}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme actionTokens should match the established baseline 1`] = `
{
  "action": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.20}",
          "base": "{colors.elysium.brand.70}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.40}",
          "_lightMode": "{colors.elysium.brand.30}",
          "base": "{colors.elysium.brand.40}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.60}",
          "_lightMode": "{colors.elysium.brand.50}",
          "base": "{colors.elysium.brand.60}",
        },
      },
    },
    "border": {
      "100": {
        "description": "for use on less prominent actionable borders, like input fields etc",
        "value": {
          "_darkMode": "{colors.elysium.neutral.30}",
          "_lightMode": "{colors.elysium.neutral.60}",
          "base": "{colors.elysium.neutral.30}",
        },
      },
      "focus": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.10}",
          "_lightMode": "{colors.elysium.neutral.70}",
          "base": "{colors.elysium.neutral.10}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.20}",
          "_lightMode": "{colors.elysium.neutral.50}",
          "base": "{colors.elysium.neutral.20}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.50}",
          "_lightMode": "{colors.elysium.neutral.10}",
          "base": "{colors.elysium.neutral.50}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.action.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.elysium.neutral.70}",
          "_lightMode": "{colors.elysium.neutral.5}",
          "base": "{colors.elysium.neutral.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
    "navigation": {
      "hover": {
        "description": "Text color of hyperlinks throughout the site while hovering",
        "value": {
          "_darkMode": "{colors.elysium.brand.20}",
          "_lightMode": "{colors.elysium.brand.90}",
          "base": "{colors.elysium.brand.20}",
        },
      },
      "initial": {
        "description": "Text color of hyperlinks throughout the site. ",
        "value": {
          "_darkMode": "{colors.elysium.neutral.white}",
          "_lightMode": "{colors.elysium.brand.100}",
          "base": "{colors.elysium.neutral.white}",
        },
      },
      "visited": {
        "description": "Text color of hyperlinks throughout the site that have been visited",
        "value": {
          "_darkMode": "{colors.elysium.brand.10}",
          "_lightMode": "{colors.elysium.neutral.80}",
          "base": "{colors.elysium.brand.10}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Text action items that are sitting on a lighter background color, like secondary buttons etc. ",
        "value": {
          "_darkMode": "{colors.elysium.brand.40}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.brand.40}",
        },
      },
      "200": {
        "description": "reserved for interactive text, or icons using brand colors. ",
        "value": {
          "_darkMode": "{colors.elysium.neutral.5}",
          "_lightMode": "{colors.elysium.neutral.70}",
          "base": "{colors.elysium.neutral.5}",
        },
      },
      "initial": {
        "description": 
"Text color inside of interactive items using the action palette
Use for: Buttons (filled, outline). Button icons"
,
        "value": {
          "_darkMode": "{colors.elysium.brand.100}",
          "_lightMode": "{colors.elysium.brand.100}",
          "base": "{colors.elysium.brand.100}",
        },
      },
      "inverse": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.10}",
          "_lightMode": "{colors.elysium.neutral.90}",
          "base": "{colors.elysium.neutral.10}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.elysium.brand.80}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.brand.80}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme secondaryActionTokens should match the established baseline 1`] = `
{
  "secondaryAction": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.40}",
          "_lightMode": "{colors.elysium.brand.70}",
          "base": "{colors.elysium.brand.40}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.40}",
          "base": "{colors.elysium.brand.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.90}",
          "_lightMode": "{colors.elysium.brand.20}",
          "base": "{colors.elysium.brand.90}",
        },
      },
    },
    "border": {
      "100": {
        "description": "for use on less prominent actionable borders, like input fields etc",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.70}",
          "base": "{colors.elysium.brand.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.30}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.brand.30}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.50}",
          "base": "{colors.elysium.brand.70}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.secondary-action.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.elysium.brand.80}",
          "_lightMode": "{colors.elysium.brand.40}",
          "base": "{colors.elysium.brand.80}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
    "navigation": {
      "hover": {
        "description": "Text color of hyperlinks throughout the site while hovering. ",
        "value": {
          "_darkMode": "{colors.elysium.brand.30}",
          "_lightMode": "{colors.elysium.brand.90}",
          "base": "{colors.elysium.brand.30}",
        },
      },
      "initial": {
        "description": "Text color of hyperlinks throughout the site. ",
        "value": {
          "_darkMode": "{colors.elysium.brand.50}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.brand.50}",
        },
      },
      "visited": {
        "description": "Text color of hyperlinks throughout the site that have been vistited",
        "value": {
          "_darkMode": "{colors.elysium.brand.10}",
          "_lightMode": "{colors.elysium.brand.100}",
          "base": "{colors.elysium.brand.10}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Text color inside of interactive items and icons that have an inverse background of the initial token. That may need a different style of emphasis. Use case may vary per product.",
        "value": {
          "_darkMode": "{colors.elysium.brand.10}",
          "_lightMode": "{colors.elysium.brand.100}",
          "base": "{colors.elysium.brand.10}",
        },
      },
      "200": {
        "description": 
"Text color inside of interactive items
Use for: Buttons (filled, outline). Button icons that may need a different style of emphasis. Use case may vary per product."
,
        "value": {
          "_darkMode": "{colors.elysium.brand.50}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.brand.50}",
        },
      },
      "initial": {
        "description": 
"Text color inside of interactive items
Use for: Buttons (filled, outline). Button icons that may need a different style of emphasis. Use case may vary per product."
,
        "value": {
          "_darkMode": "{colors.elysium.brand.30}",
          "_lightMode": "{colors.elysium.brand.90}",
          "base": "{colors.elysium.brand.30}",
        },
      },
      "static": {
        "description": 
"Text color inside of interactive items
Use for: Buttons (filled, outline). Button icons that may need a different style of emphasis. Use case may vary per product."
,
        "value": {
          "_darkMode": "{colors.elysium.brand.60}",
          "_lightMode": "{colors.elysium.brand.60}",
          "base": "{colors.elysium.brand.60}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme infoTokens should match the established baseline 1`] = `
{
  "info": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.50}",
          "_lightMode": "{colors.info.elysium.50}",
          "base": "{colors.info.elysium.50}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.90}",
          "_lightMode": "{colors.info.elysium.20}",
          "base": "{colors.info.elysium.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.70}",
          "_lightMode": "{colors.info.elysium.30}",
          "base": "{colors.info.elysium.70}",
        },
      },
    },
    "border": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.70}",
          "_lightMode": "{colors.info.elysium.40}",
          "base": "{colors.info.elysium.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.50}",
          "_lightMode": "{colors.info.elysium.60}",
          "base": "{colors.info.elysium.50}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.80}",
          "_lightMode": "{colors.info.elysium.20}",
          "base": "{colors.info.elysium.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.info.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.info.elysium.90}",
          "_lightMode": "{colors.info.elysium.10}",
          "base": "{colors.info.elysium.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.info.elysium.90}",
          "_lightMode": "{colors.info.elysium.10}",
          "base": "{colors.info.elysium.90}",
        },
      },
      "200": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.info.elysium.60}",
          "_lightMode": "{colors.info.elysium.50}",
          "base": "{colors.info.elysium.60}",
        },
      },
      "initial": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.info.elysium.80}",
          "_lightMode": "{colors.info.elysium.40}",
          "base": "{colors.info.elysium.80}",
        },
      },
    },
    "text": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.20}",
          "_lightMode": "{colors.info.elysium.80}",
          "base": "{colors.info.elysium.20}",
        },
      },
      "200": {
        "description": "High emphasis text or icon to indicate an info state or highlight information",
        "value": {
          "_darkMode": "{colors.info.elysium.10}",
          "_lightMode": "{colors.info.elysium.100}",
          "base": "{colors.info.elysium.10}",
        },
      },
      "initial": {
        "description": "The default styling for static info text and icons within an info palette container",
        "value": {
          "_darkMode": "{colors.info.elysium.10}",
          "_lightMode": "{colors.info.elysium.90}",
          "base": "{colors.info.elysium.10}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.info.elysium.60}",
          "_lightMode": "{colors.info.elysium.60}",
          "base": "{colors.info.elysium.60}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme successTokens should match the established baseline 1`] = `
{
  "success": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.40}",
          "_lightMode": "{colors.elysium.success.80}",
          "base": "{colors.elysium.success.40}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.50}",
          "_lightMode": "{colors.elysium.success.70}",
          "base": "{colors.elysium.success.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.60}",
          "_lightMode": "{colors.elysium.success.60}",
          "base": "{colors.elysium.success.60}",
        },
      },
    },
    "border": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.50}",
          "_lightMode": "{colors.elysium.success.70}",
          "base": "{colors.elysium.success.50}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.90}",
          "_lightMode": "{colors.elysium.success.20}",
          "base": "{colors.elysium.success.90}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.success.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.elysium.success.90}",
          "_lightMode": "{colors.elysium.success.10}",
          "base": "{colors.elysium.success.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.elysium.success.90}",
          "_lightMode": "{colors.elysium.success.20}",
          "base": "{colors.elysium.success.90}",
        },
      },
      "200": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.elysium.success.80}",
          "_lightMode": "{colors.elysium.success.60}",
          "base": "{colors.elysium.success.80}",
        },
      },
      "initial": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.elysium.success.60}",
          "_lightMode": "{colors.elysium.success.60}",
          "base": "{colors.elysium.success.60}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Medium emphasis success text ",
        "value": {
          "_darkMode": "{colors.elysium.success.20}",
          "_lightMode": "{colors.elysium.success.90}",
          "base": "{colors.elysium.success.20}",
        },
      },
      "200": {
        "description": "Highest emphasis success color",
        "value": {
          "_darkMode": "{colors.elysium.success.10}",
          "_lightMode": "{colors.elysium.success.100}",
          "base": "{colors.elysium.success.10}",
        },
      },
      "initial": {
        "description": "The default color of body success text within a success colored container. ",
        "value": {
          "_darkMode": "{colors.elysium.success.60}",
          "_lightMode": "{colors.elysium.success.90}",
          "base": "{colors.elysium.success.60}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.elysium.success.100}",
          "_lightMode": "{colors.elysium.success.10}",
          "base": "{colors.elysium.success.100}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.elysium.success.70}",
          "_lightMode": "{colors.elysium.success.70}",
          "base": "{colors.elysium.success.70}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme warningTokens should match the established baseline 1`] = `
{
  "warning": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.40}",
          "_lightMode": "{colors.warning.elysium.80}",
          "base": "{colors.warning.elysium.40}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.50}",
          "_lightMode": "{colors.warning.elysium.70}",
          "base": "{colors.warning.elysium.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.60}",
          "_lightMode": "{colors.warning.elysium.60}",
          "base": "{colors.warning.elysium.60}",
        },
      },
    },
    "border": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.20}",
          "_lightMode": "{colors.warning.elysium.70}",
          "base": "{colors.warning.elysium.20}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.80}",
          "_lightMode": "{colors.warning.elysium.30}",
          "base": "{colors.warning.elysium.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.warning.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.warning.elysium.90}",
          "_lightMode": "{colors.warning.elysium.20}",
          "base": "{colors.warning.elysium.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.warning.elysium.90}",
          "_lightMode": "{colors.warning.elysium.10}",
          "base": "{colors.warning.elysium.90}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.50}",
          "_lightMode": "{colors.warning.elysium.60}",
          "base": "{colors.warning.elysium.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.70}",
          "_lightMode": "{colors.warning.elysium.40}",
          "base": "{colors.warning.elysium.70}",
        },
      },
    },
    "text": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.30}",
          "_lightMode": "{colors.warning.elysium.90}",
          "base": "{colors.warning.elysium.30}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.100}",
          "_lightMode": "{colors.warning.elysium.100}",
          "base": "{colors.warning.elysium.100}",
        },
      },
      "initial": {
        "description": "The default color of body warning text and icons within a warning colored container. ",
        "value": {
          "_darkMode": "{colors.warning.elysium.40}",
          "_lightMode": "{colors.warning.elysium.100}",
          "base": "{colors.warning.elysium.40}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.warning.elysium.100}",
          "_lightMode": "{colors.warning.elysium.20}",
          "base": "{colors.warning.elysium.100}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.warning.elysium.80}",
          "_lightMode": "{colors.warning.elysium.80}",
          "base": "{colors.warning.elysium.80}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme dangerTokens should match the established baseline 1`] = `
{
  "danger": {
    "bg": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.30}",
          "_lightMode": "{colors.danger.elysium.80}",
          "base": "{colors.danger.elysium.30}",
        },
      },
      "hover": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.50}",
          "_lightMode": "{colors.danger.elysium.40}",
          "base": "{colors.danger.elysium.50}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.70}",
          "_lightMode": "{colors.danger.elysium.50}",
          "base": "{colors.danger.elysium.70}",
        },
      },
    },
    "border": {
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.30}",
          "_lightMode": "{colors.danger.elysium.50}",
          "base": "{colors.danger.elysium.30}",
        },
      },
    },
    "ghost": {
      "active": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.80}",
          "_lightMode": "{colors.danger.elysium.20}",
          "base": "{colors.danger.elysium.80}",
        },
      },
      "hover": {
        "description": "Hover state of ghost action elements. Pair with text.danger.100 to meet accessibility requirements.",
        "value": {
          "_darkMode": "{colors.danger.elysium.90}",
          "_lightMode": "{colors.danger.elysium.10}",
          "base": "{colors.danger.elysium.90}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.100}",
          "_lightMode": "{colors.elysium.neutral.white}",
          "base": "{colors.elysium.neutral.100}",
        },
      },
    },
    "surface": {
      "100": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.danger.elysium.90}",
          "_lightMode": "{colors.danger.elysium.10}",
          "base": "{colors.danger.elysium.90}",
        },
      },
      "200": {
        "description": 
"Reserved for the &quot;floor&quot; of the page, or the lowest elevation surface
Use for: Page backgrounds"
,
        "value": {
          "_darkMode": "{colors.danger.elysium.70}",
          "_lightMode": "{colors.danger.elysium.60}",
          "base": "{colors.danger.elysium.70}",
        },
      },
      "initial": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.80}",
          "_lightMode": "{colors.danger.elysium.30}",
          "base": "{colors.danger.elysium.80}",
        },
      },
    },
    "text": {
      "100": {
        "description": "Medium emphasis danger text ",
        "value": {
          "_darkMode": "{colors.danger.elysium.30}",
          "_lightMode": "{colors.danger.elysium.80}",
          "base": "{colors.danger.elysium.30}",
        },
      },
      "200": {
        "description": "High emphasis text or icon to indicate a danger state, like an error within an input field, etc. ",
        "value": {
          "_darkMode": "{colors.danger.elysium.10}",
          "_lightMode": "{colors.danger.elysium.100}",
          "base": "{colors.danger.elysium.10}",
        },
      },
      "initial": {
        "description": "The default color of body danger text within a danger colored container. ",
        "value": {
          "_darkMode": "{colors.danger.elysium.50}",
          "_lightMode": "{colors.danger.elysium.70}",
          "base": "{colors.danger.elysium.50}",
        },
      },
      "inverse": {
        "description": "For use in containers that are also using the &quot;inverse&quot; styling. The inverse of the current mode the page is set to. ",
        "value": {
          "_darkMode": "{colors.danger.elysium.100}",
          "_lightMode": "{colors.danger.elysium.100}",
          "base": "{colors.danger.elysium.100}",
        },
      },
      "static": {
        "description": "For use when a text color will not change between modes",
        "value": {
          "_darkMode": "{colors.danger.elysium.70}",
          "_lightMode": "{colors.danger.elysium.70}",
          "base": "{colors.danger.elysium.70}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme gradientTokens should match the established baseline 1`] = `
{
  "gradient": {
    "amphiaraus-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.60}",
          "_lightMode": "{colors.info.elysium.60}",
          "base": "{colors.info.elysium.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.90}",
          "_lightMode": "{colors.info.elysium.90}",
          "base": "{colors.info.elysium.90}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.10}",
          "_lightMode": "{colors.info.elysium.10}",
          "base": "{colors.info.elysium.10}",
        },
      },
    },
    "amphiaraus-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.50}",
          "_lightMode": "{colors.info.elysium.50}",
          "base": "{colors.info.elysium.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.20}",
          "_lightMode": "{colors.info.elysium.20}",
          "base": "{colors.info.elysium.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.90}",
          "_lightMode": "{colors.info.elysium.90}",
          "base": "{colors.info.elysium.90}",
        },
      },
    },
    "asphodel-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.50}",
          "_lightMode": "{colors.warning.elysium.50}",
          "base": "{colors.warning.elysium.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.80}",
          "_lightMode": "{colors.warning.elysium.80}",
          "base": "{colors.warning.elysium.80}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.100}",
          "_lightMode": "{colors.warning.elysium.100}",
          "base": "{colors.warning.elysium.100}",
        },
      },
    },
    "asphodel-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.60}",
          "_lightMode": "{colors.warning.elysium.60}",
          "base": "{colors.warning.elysium.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.20}",
          "_lightMode": "{colors.warning.elysium.20}",
          "base": "{colors.warning.elysium.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.100}",
          "_lightMode": "{colors.warning.elysium.90}",
          "base": "{colors.warning.elysium.100}",
        },
      },
    },
    "charon-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.60}",
          "_lightMode": "{colors.elysium.brand.60}",
          "base": "{colors.elysium.brand.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.90}",
          "_lightMode": "{colors.elysium.brand.90}",
          "base": "{colors.elysium.brand.90}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.10}",
          "_lightMode": "{colors.elysium.brand.10}",
          "base": "{colors.elysium.brand.10}",
        },
      },
    },
    "charon-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.60}",
          "_lightMode": "{colors.elysium.brand.60}",
          "base": "{colors.elysium.brand.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.20}",
          "_lightMode": "{colors.elysium.brand.20}",
          "base": "{colors.elysium.brand.20}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.100}",
          "_lightMode": "{colors.elysium.brand.100}",
          "base": "{colors.elysium.brand.100}",
        },
      },
    },
    "hades-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.50}",
          "_lightMode": "{colors.danger.elysium.50}",
          "base": "{colors.danger.elysium.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.80}",
          "_lightMode": "{colors.danger.elysium.80}",
          "base": "{colors.danger.elysium.80}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.10}",
          "_lightMode": "{colors.danger.elysium.10}",
          "base": "{colors.danger.elysium.10}",
        },
      },
    },
    "hades-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.20}",
          "_lightMode": "{colors.danger.elysium.40}",
          "base": "{colors.danger.elysium.20}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.40}",
          "_lightMode": "{colors.danger.elysium.20}",
          "base": "{colors.danger.elysium.40}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.danger.elysium.80}",
          "_lightMode": "{colors.danger.elysium.80}",
          "base": "{colors.danger.elysium.80}",
        },
      },
    },
    "nyx-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.50}",
          "_lightMode": "{colors.elysium.neutral.50}",
          "base": "{colors.elysium.neutral.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.90}",
          "_lightMode": "{colors.elysium.neutral.90}",
          "base": "{colors.elysium.neutral.90}",
        },
      },
      "text": {
        "description": "Reserved for usage only on top of gradients",
        "value": {
          "_darkMode": "{colors.elysium.neutral.20}",
          "_lightMode": "{colors.elysium.neutral.20}",
          "base": "{colors.elysium.neutral.20}",
        },
      },
    },
    "nyx-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.5}",
          "_lightMode": "{colors.elysium.neutral.5}",
          "base": "{colors.elysium.neutral.5}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.50}",
          "_lightMode": "{colors.elysium.neutral.40}",
          "base": "{colors.elysium.neutral.50}",
        },
      },
      "text": {
        "description": "Reserved for usage only on top of gradients",
        "value": {
          "_darkMode": "{colors.elysium.neutral.90}",
          "_lightMode": "{colors.elysium.neutral.90}",
          "base": "{colors.elysium.neutral.90}",
        },
      },
    },
    "styx-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.60}",
          "_lightMode": "{colors.elysium.accent.60}",
          "base": "{colors.elysium.accent.60}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.90}",
          "_lightMode": "{colors.elysium.accent.90}",
          "base": "{colors.elysium.accent.90}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.10}",
          "_lightMode": "{colors.elysium.accent.10}",
          "base": "{colors.elysium.accent.10}",
        },
      },
    },
    "styx-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.50}",
          "_lightMode": "{colors.elysium.accent.50}",
          "base": "{colors.elysium.accent.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.10}",
          "_lightMode": "{colors.elysium.accent.10}",
          "base": "{colors.elysium.accent.10}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.100}",
          "_lightMode": "{colors.elysium.accent.100}",
          "base": "{colors.elysium.accent.100}",
        },
      },
    },
    "thanatos-dark": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.70}",
          "_lightMode": "{colors.elysium.success.70}",
          "base": "{colors.elysium.success.70}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.90}",
          "_lightMode": "{colors.elysium.success.90}",
          "base": "{colors.elysium.success.90}",
        },
      },
      "text": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.10}",
          "_lightMode": "{colors.elysium.success.10}",
          "base": "{colors.elysium.success.10}",
        },
      },
    },
    "thanatos-light": {
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.50}",
          "_lightMode": "{colors.elysium.success.50}",
          "base": "{colors.elysium.success.50}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.10}",
          "_lightMode": "{colors.elysium.success.10}",
          "base": "{colors.elysium.success.10}",
        },
      },
      "text": {
        "description": "for text and icons on top of a gradient",
        "value": {
          "_darkMode": "{colors.elysium.success.100}",
          "_lightMode": "{colors.elysium.success.100}",
          "base": "{colors.elysium.success.100}",
        },
      },
    },
  },
}
`;

exports[`Elysium Theme dataVizTokens should match the established baseline 1`] = `
{
  "dataViz": {
    "diverging": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.70}",
          "_lightMode": "{colors.info.elysium.70}",
          "base": "{colors.info.elysium.70}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.60}",
          "_lightMode": "{colors.info.elysium.60}",
          "base": "{colors.info.elysium.60}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.50}",
          "_lightMode": "{colors.info.elysium.50}",
          "base": "{colors.info.elysium.50}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.40}",
          "_lightMode": "{colors.info.elysium.30}",
          "base": "{colors.info.elysium.40}",
        },
      },
      "50": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.80}",
          "_lightMode": "{colors.info.elysium.80}",
          "base": "{colors.info.elysium.80}",
        },
      },
      "500": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.10}",
          "_lightMode": "{colors.elysium.neutral.10}",
          "base": "{colors.elysium.neutral.10}",
        },
      },
      "600": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.40}",
          "_lightMode": "{colors.elysium.brand.40}",
          "base": "{colors.elysium.brand.40}",
        },
      },
      "700": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.50}",
          "_lightMode": "{colors.elysium.brand.50}",
          "base": "{colors.elysium.brand.50}",
        },
      },
      "800": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.60}",
          "_lightMode": "{colors.elysium.brand.60}",
          "base": "{colors.elysium.brand.60}",
        },
      },
      "900": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.70}",
          "base": "{colors.elysium.brand.70}",
        },
      },
    },
    "progress": {
      "complete": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.60}",
          "_lightMode": "{colors.elysium.success.60}",
          "base": "{colors.elysium.success.60}",
        },
      },
      "end": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.70}",
          "base": "{colors.elysium.brand.70}",
        },
      },
      "start": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.40}",
          "_lightMode": "{colors.elysium.brand.40}",
          "base": "{colors.elysium.brand.40}",
        },
      },
    },
    "qualitative": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.60}",
          "_lightMode": "{colors.elysium.brand.50}",
          "base": "{colors.elysium.brand.60}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.warning.elysium.60}",
          "_lightMode": "{colors.warning.elysium.60}",
          "base": "{colors.warning.elysium.60}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.success.60}",
          "_lightMode": "{colors.elysium.success.60}",
          "base": "{colors.elysium.success.60}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.accent.60}",
          "_lightMode": "{colors.elysium.accent.60}",
          "base": "{colors.elysium.accent.60}",
        },
      },
      "500": {
        "description": "",
        "value": {
          "_darkMode": "{colors.info.elysium.50}",
          "_lightMode": "{colors.info.elysium.50}",
          "base": "{colors.info.elysium.50}",
        },
      },
      "600": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.10}",
          "_lightMode": "{colors.elysium.neutral.70}",
          "base": "{colors.elysium.brand.10}",
        },
      },
      "700": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.neutral.40}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.neutral.40}",
        },
      },
    },
    "sequential": {
      "100": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.90}",
          "_lightMode": "{colors.elysium.brand.30}",
          "base": "{colors.elysium.brand.90}",
        },
      },
      "200": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.70}",
          "_lightMode": "{colors.elysium.brand.40}",
          "base": "{colors.elysium.brand.70}",
        },
      },
      "300": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.50}",
          "_lightMode": "{colors.elysium.brand.50}",
          "base": "{colors.elysium.brand.50}",
        },
      },
      "400": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.30}",
          "_lightMode": "{colors.elysium.brand.70}",
          "base": "{colors.elysium.brand.30}",
        },
      },
      "500": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.20}",
          "_lightMode": "{colors.elysium.brand.80}",
          "base": "{colors.elysium.brand.20}",
        },
      },
      "600": {
        "description": "",
        "value": {
          "_darkMode": "{colors.elysium.brand.5}",
          "_lightMode": "{colors.elysium.brand.100}",
          "base": "{colors.elysium.brand.5}",
        },
      },
    },
  },
}
`;
